# shimmer-nft-collection-rust

./: .env.example  .gitignore  Cargo.toml  README.md  drop.csv  drop.csv.example
sent/: wave3.txt  wave4.txt  wave5.txt
src/create-account/: main.rs
src/create-collection-nft/: main.rs
src/create-nfts/: main.rs
src/generate-mnemonic/: main.rs
src/generate-new-address/: main.rs
src/get-address/: main.rs
src/get-balance/: main.rs
src/lock-collection-nft/: main.rs
src/send-nfts-to-csv/: main.rs
